--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@types/react": "18.2.79",
     "date-fns": "^4.1.0",
     "expo": "~51.0.28",
     "expo-linear-gradient": "~13.0.2",
@@ -20,8 +21,7 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-screens": "3.31.1",
-    "react-navigation": "^5.0.0",
-    "@types/react": "18.2.79"
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
